--- a/nginx/sites-available/odoo.conf
+++ b/nginx/sites-available/odoo.conf
@@ -1,18 +1,33 @@
-server {
-	listen 8011 default_server;
-	listen [::]:8011 default_server;
-	root /var/www/html;
-
-	index index.html index.htm index.nginx-debian.html;
-
-	server_name _;
-
-location / {
-        proxy_pass http://localhost:8149;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+upstream odoo {
+    server 127.0.0.1:8149;
 }
+
+server {
+    listen 80;
+    server_name 192.168.100.40;
+    root        /usr/share/nginx/html;
+    index       index.html index.htm;
+    access_log  /var/log/nginx/odoo-mydomain-local.access.log;
+    error_log   /var/log/nginx/odoo-mydomain-local.error.log;
+
+    location / {
+        proxy_pass  http://odoo;
+        # force timeouts if the backend dies
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_redirect off;
+
+        # set headers
+        proxy_set_header    Host            $host;
+        proxy_set_header    X-Real-IP       $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto https;
+    }
+
+    # cache some static data in memory for 60mins
+    location ~* /web/static/ {
+        proxy_cache_valid 200 60m;
+        proxy_buffering on;
+        expires 864000;
+        proxy_pass http://odoo;
+    }
 }
