--- a/nginx/sites-available/odoo.conf
+++ b/nginx/sites-available/odoo.conf
@@ -4,7 +4,7 @@ upstream odoo {
 
 server {
     listen 80;
-    server_name 192.168.100.40;
+    server_name MYiPADDRESS;
     root        /usr/share/nginx/html;
     index       index.html index.htm;
     access_log  /var/log/nginx/odoo-mydomain-local.access.log;
